# summary-gen

./: .dockerignore  .gitattributes  .gitignore  LICENSE  README.md  compose.yaml  models
.github/workflows/: docker-image.yml
backend/: .gitignore  CMakeLists.txt  dependencies.cmake
backend/proto/: CMakeLists.txt  summarizer.proto  transcriber.proto
backend/source/: CMakeLists.txt  decode.cpp  main.cpp  openai.cpp  openai.h  summarizer.cpp  summarizer.h  transcriber.cpp  types.h
backend/source/utils/: collect.h  fmt.h  http.cpp  http.h  json.h  lock.h
core/: .gitignore  CMakeLists.txt  dependencies.cmake
core/proto/: CMakeLists.txt
core/source/: CMakeLists.txt  decode.cpp  main.cpp  rwlock.h  transcriber.h
dockerfiles/: backend.Dockerfile  frontend.Dockerfile  springboot-service.Dockerfile  springboot.Dockerfile  worker.Dockerfile
docs/ProjectDiaries/: Patrick.md
docs/drawio/: architecture.drawio
docs/project-diaries/: Benedikt.md  Elias.md  Julian.md  Patrick.md
frontend/: .gitignore  package-lock.json  package.json  svelte.config.js  tailwind.config.js
frontend/src/: app.css  app.d.ts  app.html  hooks.server.ts
frontend/src/lib/: banner.svelte  summarize.svelte  transcribe.svelte  transcribe.ts  utils.ts
frontend/src/lib/components/: app-sidebar.svelte  banner.svelte  clipboard.svelte  file-upload.svelte  huffman-view.svelte  lightswitch.svelte  metrics-view.svelte  model-select.svelte  nav-main.svelte  overall-summarize.svelte  overall-summary-view.svelte  summarize.svelte  temperature-slider.svelte  transcribe.svelte  upload.svelte
frontend/src/lib/grpc/: analytics.ts  summarize.ts  summarizer.ts  transcribe.ts  transcriber.ts
frontend/src/lib/http/: analytics.ts  persistence.ts  settings.ts  summarize.ts  transcribe.ts
frontend/src/routes/: +layout.server.ts  +layout.svelte  +page.server.ts  +page.svelte
frontend/src/routes/api/persistence/: +server.ts
frontend/src/routes/api/settings/: +server.ts
frontend/src/routes/api/summarize/: +server.ts
frontend/src/routes/api/transcribe/: +server.ts
frontend/src/routes/auth/: +page.svelte
frontend/src/routes/dashboard/: +layout.svelte  +page.server.ts  +page.svelte
frontend/src/routes/dashboard/analytics/: +page.svelte
frontend/src/routes/dashboard/history/: +page.svelte
frontend/src/routes/dashboard/settings/: +page.svelte
frontend/src/routes/heartbeat/: +server.ts
frontend/src/routes/history/: +page.svelte
frontend/src/routes/summarize/: +server.ts
frontend/src/routes/summarize/heartbeat/: +server.ts
frontend/src/routes/summarize/models/: +server.ts
frontend/src/routes/transcribe/: +server.ts
frontend/src/routes/transcribe/heartbeat/: +server.ts
interface/: .env  package.json
interface/src/lib/: transcribe.ts
interface/src/routes/: +page.server.ts  +page.svelte
interface/src/routes/heartbeat/: +server.ts
interface/src/routes/transcribe/: +server.ts
proto/: analytics.proto  persistence.proto  settings.proto  summarizer.proto  transcriber.proto  transcription.proto
services/analytics/: build.gradle.kts  settings.gradle.kts
services/persistance-service/: build.gradle.kts  settings.gradle.kts
services/persistence/: build.gradle.kts  settings.gradle.kts
services/shared/shared-auth/: build.gradle.kts
services/shared/shared-jpa/: build.gradle.kts
services/worker/: CMakeLists.txt  CMakePresets.json  dependencies.cmake
services/worker/cmake/: CPM.cmake
services/worker/proto/: CMakeLists.txt  persistence.proto  summarizer.proto  transcriber.proto
services/worker/source/: CMakeLists.txt  decode.cpp  decode.h  main.cpp  openai.cpp  openai.h  summarizer.cpp  summarizer.h  transcriber.cpp  transcriber.h  types.h
services/worker/source/utils/: collect.h  continuation.cpp  continuation.h  fmt.h  http.cpp  http.h  json.h  lock.h  uuid.cpp  uuid.h
(+100 files in other folders)
